# yolov5-transfer-learning

./: .gitignore  crawl.py  pyproject.toml  train.py
data/: maple.yaml
