[tool.poetry]
name = "yolov5-transfer-learning"
version = "0.1.0"
description = "yolov5-transfer-learning"
authors = ["SShowbiz <hwkim408@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
torch = "^1.8.1"
pytorch-lightning = "^1.3.1"
torchvision = "^0.9.1"
pandas = "^1.2.4"
opencv-python = "^4.5.2"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pylint = "^2.8.2"
